feat(core): bump rxjs@7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,10 @@
     "bulldozer-client",
     "editor",
     "wallet-adapter"
-  ]
+  ],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
