--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "jszip": "^3.7.1",
     "monaco-editor": "^0.28.1",
     "ngx-monaco-editor": "^12.0.0",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.2",
     "tslib": "^2.0.0",
     "zone.js": "0.11.4"
   },
