--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -98,6 +98,9 @@
         "libs/bulldozer/client/shared/directives/section-header/src/index.ts"
       ],
       "@bulldozer-client/shell": ["libs/bulldozer/client/shell/src/index.ts"],
+      "@bulldozer-client/stop-propagation": [
+        "libs/bulldozer/client/shared/directives/stop-propagation/src/index.ts"
+      ],
       "@bulldozer-client/view-application": [
         "libs/bulldozer/client/applications/pages/view-application/src/index.ts"
       ],
@@ -205,6 +208,7 @@
       ],
       "@heavy-duty/generator": ["libs/bulldozer/shared/generator/src/index.ts"],
       "@heavy-duty/ng-anchor": ["libs/shared/ng-anchor/src/index.ts"],
+      "@heavy-duty/rx-solana": ["libs/shared/rx-solana/src/index.ts"],
       "@heavy-duty/shared/utils/operators": [
         "libs/shared/utils/operators/src/index.ts"
       ],
@@ -216,8 +220,7 @@
       ],
       "@heavy-duty/wallet-adapter-material": [
         "libs/wallet-adapter/ui/material/src/index.ts"
-      ],
-      "@heavy-duty/rx-solana": ["libs/shared/rx-solana/src/index.ts"]
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
