--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ngx-monaco-editor": "^12.0.0",
     "rxjs": "^7.5.2",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
@@ -61,6 +62,7 @@
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.18.1",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.3.7",
