refactor(bulldozer-client): use ngx-solana for workspace and clean up

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -131,6 +131,9 @@
       "@bulldozer-client/workspace-tab": [
         "libs/bulldozer/client/workspaces/components/workspace-tab/src/index.ts"
       ],
+      "@bulldozer-client/workspaces-data-access": [
+        "libs/bulldozer/client/workspaces/data-access/src/index.ts"
+      ],
       "@heavy-duty/bulldozer-devkit": [
         "libs/bulldozer/shared/devkit/src/index.ts"
       ],
