feat(bulldozer-client): set up notifications for other accounts

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -97,6 +97,9 @@
       "@bulldozer-client/instructions-data-access": [
         "libs/bulldozer/client/instructions/data-access/src/index.ts"
       ],
+      "@bulldozer-client/notification-store": [
+        "libs/bulldozer/client/shared/stores/notification-store/src/index.ts"
+      ],
       "@bulldozer-client/obscure-address": [
         "libs/bulldozer/client/shared/pipes/obscure-address/src/index.ts"
       ],
