--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -122,6 +122,9 @@
       "@bulldozer-client/tab-store": [
         "libs/bulldozer/client/shared/stores/tab-store/src/index.ts"
       ],
+      "@bulldozer-client/unauthorized-access": [
+        "libs/bulldozer/client/auth/pages/unauthorized-access/src/index.ts"
+      ],
       "@bulldozer-client/view-application": [
         "libs/bulldozer/client/applications/pages/view-application/src/index.ts"
       ],
