fix(bulldozer-client): make rxjs library buildable

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@nrwl/cypress": "13.4.6",
     "@nrwl/eslint-plugin-nx": "13.4.6",
     "@nrwl/jest": "13.4.6",
+    "@nrwl/js": "13.4.6",
     "@nrwl/linter": "13.4.6",
     "@nrwl/tao": "13.4.6",
     "@nrwl/workspace": "13.4.6",
