--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "13.1.3",
     "@angular/platform-browser-dynamic": "13.1.3",
     "@angular/router": "13.1.3",
+    "@heavy-duty/anchor": "^0.21.0-1",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.4.6",
