--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.1.3",
-    "@angular/cdk": "13.1.3",
-    "@angular/common": "13.1.3",
-    "@angular/compiler": "13.1.3",
-    "@angular/core": "13.1.3",
-    "@angular/forms": "13.1.3",
-    "@angular/material": "13.1.3",
-    "@angular/platform-browser": "13.1.3",
-    "@angular/platform-browser-dynamic": "13.1.3",
-    "@angular/router": "13.1.3",
+    "@angular/animations": "13.2.2",
+    "@angular/cdk": "13.2.2",
+    "@angular/common": "13.2.2",
+    "@angular/compiler": "13.2.2",
+    "@angular/core": "13.2.2",
+    "@angular/forms": "13.2.2",
+    "@angular/material": "13.2.2",
+    "@angular/platform-browser": "13.2.2",
+    "@angular/platform-browser-dynamic": "13.2.2",
+    "@angular/router": "13.2.2",
     "@heavy-duty/anchor": "^0.21.0-1",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
-    "@nrwl/angular": "13.4.6",
+    "@nrwl/angular": "13.8.0",
     "@project-serum/anchor": "^0.21.0",
     "@solana/wallet-adapter-base": "^0.9.2",
     "@solana/wallet-adapter-wallets": "^0.14.2",
@@ -40,37 +40,37 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.1.4",
+    "@angular-devkit/build-angular": "13.2.3",
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
-    "@angular/cli": "13.1.4",
-    "@angular/compiler-cli": "13.1.3",
-    "@angular/language-service": "13.1.3",
+    "@angular/cli": "13.2.3",
+    "@angular/compiler-cli": "13.2.2",
+    "@angular/language-service": "13.2.2",
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.4.6",
-    "@nrwl/cypress": "13.4.6",
-    "@nrwl/eslint-plugin-nx": "13.4.6",
-    "@nrwl/jest": "13.4.6",
-    "@nrwl/js": "13.4.6",
-    "@nrwl/linter": "13.4.6",
-    "@nrwl/tao": "13.4.6",
-    "@nrwl/workspace": "13.4.6",
+    "@nrwl/cli": "13.8.0",
+    "@nrwl/cypress": "13.8.0",
+    "@nrwl/eslint-plugin-nx": "13.8.0",
+    "@nrwl/jest": "13.8.0",
+    "@nrwl/js": "13.8.0",
+    "@nrwl/linter": "13.8.0",
+    "@nrwl/tao": "13.8.0",
+    "@nrwl/workspace": "13.8.0",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.18.1",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@typescript-eslint/eslint-plugin": "5.10.2",
+    "@typescript-eslint/parser": "5.10.2",
     "autoprefixer": "^10.3.7",
     "chai": "^4.3.4",
     "cypress": "^8.6.0",
-    "eslint": "8.2.0",
+    "eslint": "8.7.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^7.0.2",
@@ -78,12 +78,12 @@
     "jest-preset-angular": "11.0.0-rc.3",
     "lint-staged": "^11.2.3",
     "mocha": "^9.1.3",
-    "ng-packagr": "13.1.3",
+    "ng-packagr": "13.2.1",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.5",
     "typescript": "4.5.5"
