--- a/apps/bulldozer-programs/tsconfig.json
+++ b/apps/bulldozer-programs/tsconfig.json
@@ -6,6 +6,6 @@
     "module": "commonjs",
     "target": "es6",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "strict": true
   }
 }
