--- a/apps/bulldozer-programs/Anchor.toml
+++ b/apps/bulldozer-programs/Anchor.toml
@@ -1,5 +1,8 @@
+[features]
+seeds = true
+
 [programs.localnet]
-bulldozer = "GVm1TjFD3V6paG5ef4cvpd7fc27bwyjityN2sbyPJpef"
+bulldozer = "7WgU9mAEgB1doxyKisYd2HAxdsNUrpfP6tAPvyNYnFfD"
 
 [registry]
 url = "https://anchor.projectserum.com"
@@ -9,4 +12,4 @@ cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/**.spec.ts --parallel"
+test = "ts-mocha -p ./tsconfig.json -t 1000000 tests/*.spec.ts --parallel"
