feat(bulldozer-client): set up solana connection into the app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
     "bulldozer-client",
     "editor",
     "wallet-adapter",
-    "ngx-solana"
+    "ngx-solana",
+    "ngx-websocket"
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
