--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -167,6 +167,9 @@
       "@bulldozer-client/tab-store": [
         "libs/bulldozer/client/shared/stores/tab-store/src/index.ts"
       ],
+      "@bulldozer-client/transactions-data-access": [
+        "libs/bulldozer/client/transactions/data-access/src/index.ts"
+      ],
       "@bulldozer-client/unauthorized-access": [
         "libs/bulldozer/client/auth/pages/unauthorized-access/src/index.ts"
       ],
