chore(bulldozer-client): bump monaco editor versions

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "13.2.2",
     "@angular/router": "13.2.2",
     "@heavy-duty/anchor": "^0.22.1-1",
+    "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.8.0",
@@ -32,8 +33,7 @@
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
     "jszip": "^3.7.1",
-    "monaco-editor": "^0.28.1",
-    "ngx-monaco-editor": "^12.0.0",
+    "monaco-editor": "^0.32.1",
     "rxjs": "^7.5.2",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
