--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
-    "@nrwl/angular": "13.8.0",
+    "@nrwl/angular": "13.8.4",
     "@solana/wallet-adapter-base": "^0.9.2",
     "@solana/wallet-adapter-wallets": "^0.14.2",
-    "@solana/web3.js": "^1.34.0",
+    "@solana/web3.js": "^1.36.0",
     "bs58": "^5.0.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
@@ -51,14 +51,14 @@
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
     "@ngneat/tailwind": "^7.0.3",
-    "@nrwl/cli": "13.8.0",
-    "@nrwl/cypress": "13.8.0",
-    "@nrwl/eslint-plugin-nx": "13.8.0",
-    "@nrwl/jest": "13.8.0",
-    "@nrwl/js": "13.8.0",
-    "@nrwl/linter": "13.8.0",
-    "@nrwl/tao": "13.8.0",
-    "@nrwl/workspace": "13.8.0",
+    "@nrwl/cli": "13.8.4",
+    "@nrwl/cypress": "13.8.4",
+    "@nrwl/eslint-plugin-nx": "13.8.4",
+    "@nrwl/jest": "13.8.4",
+    "@nrwl/js": "13.8.4",
+    "@nrwl/linter": "13.8.4",
+    "@nrwl/tao": "13.8.4",
+    "@nrwl/workspace": "13.8.4",
     "@types/chai": "^4.2.21",
     "@types/file-saver": "^2.0.3",
     "@types/jest": "27.0.2",
@@ -75,7 +75,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "husky": "^7.0.2",
     "jest": "27.2.3",
-    "jest-preset-angular": "11.0.0-rc.3",
+    "jest-preset-angular": "11.1.1",
     "lint-staged": "^11.2.3",
     "mocha": "^9.1.3",
     "ng-packagr": "13.2.1",
