chore(broadcaster): install deps and set up scope

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "editor",
     "wallet-adapter",
     "ngx-solana",
-    "ngx-websocket"
+    "ngx-websocket",
+    "broadcaster"
   ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
