--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "13.2.2",
     "@heavy-duty/anchor": "^0.22.1-1",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@nestjs/platform-ws": "^8.4.0",
+    "@nestjs/websockets": "^8.4.0",
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.8.4",
@@ -57,6 +59,7 @@
     "@nrwl/jest": "13.8.4",
     "@nrwl/js": "13.8.4",
     "@nrwl/linter": "13.8.4",
+    "@nrwl/nest": "^13.8.8",
     "@nrwl/tao": "13.8.4",
     "@nrwl/workspace": "13.8.4",
     "@types/chai": "^4.2.21",
