--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/router": "13.2.2",
     "@heavy-duty/anchor": "^0.22.1-1",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@nestjs/common": "^8.0.0",
+    "@nestjs/core": "^8.0.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@nestjs/platform-ws": "^8.4.0",
     "@nestjs/websockets": "^8.4.0",
     "@ngrx/component": "13.0.2",
@@ -36,6 +39,7 @@
     "handlebars": "^4.7.7",
     "jszip": "^3.7.1",
     "monaco-editor": "^0.32.1",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.2",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
@@ -52,6 +56,8 @@
     "@commitlint/cli": "^13.2.1",
     "@commitlint/config-conventional": "^13.2.0",
     "@danmt/nx-anchor": "0.0.6",
+    "@nestjs/schematics": "^8.0.0",
+    "@nestjs/testing": "^8.0.0",
     "@ngneat/tailwind": "^7.0.3",
     "@nrwl/cli": "13.8.4",
     "@nrwl/cypress": "13.8.4",
@@ -60,6 +66,7 @@
     "@nrwl/js": "13.8.4",
     "@nrwl/linter": "13.8.4",
     "@nrwl/nest": "^13.8.8",
+    "@nrwl/node": "13.8.8",
     "@nrwl/tao": "13.8.4",
     "@nrwl/workspace": "13.8.4",
     "@types/chai": "^4.2.21",
