feat(bulldozer-client): show workspace transactions

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -200,6 +200,9 @@
       "@bulldozer-client/workspace-tab": [
         "libs/bulldozer/client/workspaces/components/workspace-tab/src/index.ts"
       ],
+      "@bulldozer-client/workspace-transactions": [
+        "libs/bulldozer/client/workspaces/components/workspace-transactions/src/index.ts"
+      ],
       "@bulldozer-client/workspaces-data-access": [
         "libs/bulldozer/client/workspaces/data-access/src/index.ts"
       ],
