--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -226,6 +226,9 @@
       "@heavy-duty/bulldozer-store": [
         "libs/bulldozer/shared/store/src/index.ts"
       ],
+      "@heavy-duty/bulldozer/client/users/components/user-explorer": [
+        "libs/bulldozer/client/users/components/user-explorer/src/index.ts"
+      ],
       "@heavy-duty/generator": ["libs/bulldozer/shared/generator/src/index.ts"],
       "@heavy-duty/ngx-solana": ["libs/ngx-solana/data-access/src/index.ts"],
       "@heavy-duty/ngx-solana-cdk": ["libs/ngx-solana/ui/cdk/src/index.ts"],
