--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bs58": "^5.0.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
+    "immutable": "^4.0.0",
     "jszip": "^3.7.1",
     "monaco-editor": "^0.32.1",
     "reflect-metadata": "^0.1.13",
