--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -67,6 +67,9 @@
       "@bulldozer-client/config-store": [
         "libs/bulldozer/client/shared/stores/config-store/src/index.ts"
       ],
+      "@bulldozer-client/construction-notification": [
+        "libs/bulldozer/client/shared/components/construction-notification/src/index.ts"
+      ],
       "@bulldozer-client/core-data-access": [
         "libs/bulldozer/client/core/data-access/src/index.ts"
       ],
