chore(core): migrato to latest versions

--- a/apps/bulldozer-client/project.json
+++ b/apps/bulldozer-client/project.json
@@ -31,7 +31,8 @@
         "scripts": [],
         "customWebpackConfig": {
           "path": "apps/bulldozer-client/webpack.config.js"
-        }
+        },
+        "buildLibsFromSource": false
       },
       "configurations": {
         "production": {
