--- a/firebase.json
+++ b/firebase.json
@@ -17,16 +17,16 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=3600"
+            "value": "max-age=31536000"
           }
         ]
       },
       {
-        "source": "**/*.@(jpg|jpeg|gif|png|webp|svg)",
+        "source": "**/*.@(jpg|jpeg|gif|png|webp|svg|ico|eot|otf|ttf|ttc|woff|)",
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=3600"
+            "value": "max-age=31536000"
           }
         ]
       },
@@ -35,7 +35,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "max-age=3600"
+            "value": "max-age=31536000"
           }
         ]
       }
