--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "@ngrx/component": "13.0.2",
     "@ngrx/component-store": "13.0.2",
     "@nrwl/angular": "13.10.2",
+    "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "0.9.5",
     "@solana/wallet-adapter-wallets": "0.15.5",
-    "@solana/web3.js": "1.36.0",
+    "@solana/web3.js": "^1.41.4",
     "bs58": "^5.0.0",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
@@ -89,6 +90,7 @@
     "lint-staged": "^11.2.3",
     "mocha": "^9.1.3",
     "ng-packagr": "13.3.1",
+    "nx": "13.10.2",
     "postcss": "^8.3.9",
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
@@ -96,8 +98,7 @@
     "prettier": "2.5.1",
     "tailwindcss": "^2.2.17",
     "ts-jest": "27.0.5",
-    "typescript": "4.6.3",
-    "nx": "13.10.2"
+    "typescript": "4.6.3"
   },
   "husky": {
     "hooks": {
