--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
 		"ngx-solana",
 		"ngx-websocket",
 		"broadcaster",
-		"heavy-duty-ui"
+		"heavy-duty-ui",
+		"drill"
 	],
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
 	"editor.formatOnSave": true,
