feat(drill): set up authentication

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "13.3.3",
     "@heavy-duty/anchor": "^0.24.2",
     "@materia-ui/ngx-monaco-editor": "^6.0.0",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -36,11 +37,13 @@
     "@solana/wallet-adapter-wallets": "0.15.5",
     "@solana/web3.js": "^1.41.4",
     "bs58": "^5.0.0",
+    "dotenv": "^16.0.1",
     "file-saver": "^2.0.5",
     "handlebars": "^4.7.7",
     "immutable": "^4.0.0",
     "jszip": "^3.7.1",
     "monaco-editor": "^0.32.1",
+    "qs": "^6.10.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "7.5.2",
     "tslib": "^2.0.0",
