feat(drill): add visual notifications

--- a/apps/drill-web-client/project.json
+++ b/apps/drill-web-client/project.json
@@ -21,7 +21,8 @@
 				"scripts": [],
 				"customWebpackConfig": {
 					"path": "apps/drill-web-client/webpack.config.js"
-				}
+				},
+				"buildLibsFromSource": false
 			},
 			"configurations": {
 				"production": {
