--- a/.github/workflows/heavy-duty-platform-ci.yaml
+++ b/.github/workflows/heavy-duty-platform-ci.yaml
@@ -49,7 +49,7 @@ jobs:
           sh -c "$(curl -sSfL https://release.solana.com/v${{ matrix.solana }}/install)"
           echo "-- adding new solana key file"
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          solana-keygen new -o $HOME/.config/solana/id.json
+          RUST_BACKTRACE=1 solana-keygen new -o $HOME/.config/solana/id.json
           echo "Installing Serum >> "
           npm i -g @project-serum/anchor@${{ matrix.anchor }}
           npm i -g @project-serum/anchor-cli@${{ matrix.anchor }}
