--- a/.github/workflows/heavy-duty-platform-ci.yaml
+++ b/.github/workflows/heavy-duty-platform-ci.yaml
@@ -47,9 +47,9 @@ jobs:
           rustup component add rustfmt
           echo "Installing Solana >> "
           sh -c "$(curl -sSfL https://release.solana.com/v${{ matrix.solana }}/install)"
-          echo "-- adding new solana key file"
+          echo "-- adding new solana key file to $HOME/.config/solana/id.json"
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          RUST_BACKTRACE=1 solana-keygen new -o $HOME/.config/solana/id.json
+          RUST_BACKTRACE=1 solana-keygen new -o $HOME/.config/solana/id.json -f -s
           echo "Installing Serum >> "
           npm i -g @project-serum/anchor@${{ matrix.anchor }}
           npm i -g @project-serum/anchor-cli@${{ matrix.anchor }}
