--- a/.github/workflows/heavy-duty-platform-ci.yaml
+++ b/.github/workflows/heavy-duty-platform-ci.yaml
@@ -49,8 +49,7 @@ jobs:
           sh -c "$(curl -sSfL https://release.solana.com/v${{ matrix.solana }}/install)"
           echo "-- adding new solana key file to $HOME/.config/solana/id.json"
           export PATH="$HOME/.local/share/solana/install/active_release/bin:$PATH"
-          mkdir -p $HOME/.config/solana
-          RUST_BACKTRACE=1 solana-keygen new -o $HOME/.config/solana/id.json -f -s
+          RUST_BACKTRACE=1 solana-keygen new --no-bip39-passphrase -o $HOME/.config/solana/id.json
           echo "Installing Serum >> "
           npm i -g @project-serum/anchor@${{ matrix.anchor }}
           npm i -g @project-serum/anchor-cli@${{ matrix.anchor }}
